testdata/baselines/reference/submodule/compiler/esModuleInteropImportNamespace.errors.txt
index.ts(2,5): error TS2339: Property 'default' does not exist on type '() => void'.


==== foo.d.ts (0 errors) ====
    declare function foo(): void;
    declare namespace foo {}
    export = foo;
    
==== index.ts (1 errors) ====
    import * as foo from "./foo";
    foo.default;
        ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type '() => void'.
    